--- a/templates/index.html
+++ b/templates/index.html
@@ -103,10 +103,9 @@
     <nav class="main-nav--bg">
   <div class="container main-nav">
     <div class="main-nav-start">
-      <!-- <div class="search-wrapper">
-        <i data-feather="search" aria-hidden="true"></i>
-        <input type="text" placeholder="Enter keywords ..." required>
-      </div> -->
+      <div class="search-wrapper">
+        <h2 class="main-title">Home Page</h2>
+      </div>
     </div>
     <div class="main-nav-end">
       <button class="theme-switcher gray-circle-btn" type="button" title="Switch theme">
@@ -142,9 +141,9 @@
     <!-- ! Main -->
     <main class="main users chart-page" id="skip-target">
       <div class="container">
-        <h2 class="main-title">Home Page</h2>
         <div class="row stat-cards">
           <div class="col-md-6 col-xl-3">
+            <a href="/attendance">
             <article class="stat-cards-item">
               <div class="stat-cards-icon primary">
                 <i data-feather="list" aria-hidden="true"></i>
@@ -154,8 +153,10 @@
                 <p class="stat-cards-info__title">Attendance of Workers</p>
               </div>
             </article>
+            </a>
           </div>
           <div class="col-md-6 col-xl-3">
+            <a href="/workers">
             <article class="stat-cards-item">
               <div class="stat-cards-icon warning">
                 <i data-feather="users" aria-hidden="true"></i>
@@ -165,8 +166,10 @@
                 <p class="stat-cards-info__title">View Worker Profile</p>
               </div>
             </article>
+            </a>
           </div>
           <div class="col-md-6 col-xl-3">
+            <a href="/construction">
             <article class="stat-cards-item">
               <div class="stat-cards-icon purple">
                 <i data-feather="map-pin" aria-hidden="true"></i>
@@ -176,8 +179,10 @@
                 <p class="stat-cards-info__title">View Construction Site</p>
               </div>
             </article>
+            </a>
           </div>
           <div class="col-md-6 col-xl-3">
+            <a href="/paysalary">
             <article class="stat-cards-item">
               <div class="stat-cards-icon success">
                 <i data-feather="dollar-sign" aria-hidden="true"></i>
@@ -187,6 +192,7 @@
                 <p class="stat-cards-info__title">Pay Salary to Workers</p>
               </div>
             </article>
+            </a>
           </div>
         </div>
         <div class="row">
@@ -207,9 +213,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Harsh Tiwari</td>
@@ -223,9 +228,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                      
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Ankit Yadav</td>
@@ -238,8 +242,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Tanmay Shukla</td>
@@ -253,9 +257,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Pratik Thakur</td>
@@ -269,9 +272,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Niraj Gupta</td>
@@ -284,9 +286,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Karan Yadav</td>
