--- a/templates/worker_profile.html
+++ b/templates/worker_profile.html
@@ -42,7 +42,7 @@
                     <a class=" " href="/home"><span class="icon home" aria-hidden="true"></span>Home</a>
                 </li>
                 <li>
-                    <a class=" " href="attendance">
+                    <a class=" " href="/attendance">
                         <span class="icon document" aria-hidden="true"></span>Attendance
                     </a>
                 </li>
@@ -140,8 +140,8 @@
     <main class="main users chart-page" id="skip-target">
       <div class="container">
         <div class="row stat-cards">
-          <div class="col-md-12 col-xl-12">
-            <article class="stat-cards-item-workers">
+          <div class="col-lg-9">
+            <article class="stat-cards-item-workers-profile">
                 <div class="stat-cards-icon-worker-profile primary">
                     <i data-feather="user" aria-hidden="true"></i>
                 </div>
@@ -155,8 +155,24 @@
                 </div>
             </article>
           </div>
+          <div class="col-lg-3">
+            <article class="white-block-center">
+              <div class="top-cat-title">
+                <h3>Salary</h3>
+              </div>
+              <ul class="top-cat-list">
+                <li>
+                  <a href="##">
+                    <div class="top-cat-list__title">
+                      <button class="button1-fix primary-default-btn transparent-btn">Pay Salary</button> 
+                    </div></a></li>
+                    <li>
+                      <a href="##">
+                        <div class="top-cat-list__title">
+                          <button class="button1-fix primary-default-btn transparent-btn">Salary Records</button> 
+                        </div></a></li></ul></article>
+          </div>
         </div>
-        <br>
         
       <div class="row">
         <div class="col-lg-9">
@@ -166,31 +182,51 @@
                 <tr class="users-table-info">
                   <th></th>
                   <th>Construction Site</th>
+                  <th>City</th>
                   <th>Date</th>
                   <th>Time</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
                   <td>
                     Borivali West
                   </td>
-                  
+                  <td>
+                    Borivali West
+                  </td>
                   <td>17.04.2021</td>
                   <td>09:27 AM</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="map-pin" aria-hidden="true"></i>
+                      </div>
+                    </td>
                     <td>
                       Borivali West
                     </td>
-                    
+                    <td>
+                      Borivali West
+                    </td>
                     <td>16.04.2021</td>
                     <td>09:26 AM</td>
                   </tr>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
+                  <td>
+                    Borivali West
+                  </td>
                   <td>
                     Borivali West
                   </td>
@@ -198,25 +234,44 @@
                   <td>09:31 AM</td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
                   <td>
                     Borivali West
                   </td>
-                  
+                  <td>
+                    Borivali West
+                  </td>
                   <td>14.04.2021</td>
                   <td>09:23 AM</td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
                   <td>
                     Malad West
                   </td>
-                  
+                  <td>
+                    Malad West
+                  </td>
                   <td>13.04.2021</td>
                   <td>09:28 AM</td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
+                  <td>
+                    Malad West
+                  </td>
                   <td>
                     Malad West
                   </td>
@@ -224,7 +279,14 @@
                   <td>09:29 AM</td>
                 </tr>
                 <tr>
-                  <td></td>
+                  <td>
+                    <div class="stat-cards-icon-workers-list primary">
+                      <i data-feather="map-pin" aria-hidden="true"></i>
+                    </div>
+                  </td>
+                  <td>
+                    Malad West
+                  </td>
                   <td>
                     Malad West
                   </td>
@@ -232,7 +294,14 @@
                   <td>09:26 AM</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="map-pin" aria-hidden="true"></i>
+                      </div>
+                    </td>
+                    <td>
+                      Malad West
+                    </td>
                     <td>
                       Malad West
                     </td>
@@ -244,7 +313,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td>View All</td>
+                  <td></td>
+                  <td></td>
                 </tr>
               </tbody>
             </table>
@@ -253,38 +323,78 @@
         <div class="col-lg-3">
           
           <article class="white-block">
-            <div class="top-cat-title">
-              <h3>Filter</h3>
-            </div>
-            <div class="top-cat-title">
-                <h4>From:</h4>
-                <br>
-                <input type="date" id="start-date" name="start-date">
-            </div>
-            <div class="top-cat-title">
-                <br>
-                <h4>To:</h4>
-                <br>
-                <input type="date" id="start-date" name="end-date">
-                
-            </div>
-            <div class="top-cat-title">
-                <br>
-                <h4>Construction Sites :</h4>
-                <br>
-                <select id="construction-site" placeholder="Choose Option">
-                    <option hidden >Select Construction Site</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
-            </div>
-            <div class="top-cat-title">
-                <br>
-                <button class="button1 primary-default-btn transparent-btn">Submit</button></p>
-            </div>
+            <h2 class="main-title">Filter</h2>
+            <br>
+              <form>
+                <h3 class="filter-text">From :
+                  <br> 
+                  <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                      <datalist id="month">
+                          <option value="January">
+                          <option value="February">
+                          <option value="March">
+                          <option value="April">
+                          <option value="May">
+                          <option value="June">
+                          <option value="July">
+                          <option value="August">
+                          <option value="September">
+                          <option value="October">
+                          <option value="November">
+                          <option value="December">
+                      </datalist>
+                      <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                      <datalist id="year">
+                          <option value="2021">
+                          <option value="2022">
+                          <option value="2023">
+                          <option value="2024">
+                          <option value="2025">
+                          <option value="2026">
+                      </datalist>
+                  </h3>
+                  <h3 class="filter-text">
+                  To : 
+                  <br>
+                  <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                  <datalist id="month">
+                      <option value="January">
+                      <option value="February">
+                      <option value="March">
+                      <option value="April">
+                      <option value="May">
+                      <option value="June">
+                      <option value="July">
+                      <option value="August">
+                      <option value="September">
+                      <option value="October">
+                      <option value="November">
+                      <option value="December">
+                  </datalist>
+                  <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                  <datalist id="year">
+                      <option value="2021">
+                      <option value="2022">
+                      <option value="2023">
+                      <option value="2024">
+                      <option value="2025">
+                      <option value="2026">
+                  </datalist>
+                </h3>
+                <h3 class="filter-text">
+                  Construction Site :
+                  <br>
+                  <input class="form-input" list="site" type="text" placeholder="Enter Site name" required>
+                  <datalist id="site">
+                      <option value="Om Complex">
+                      <option value="LN Tower">
+                      <option value="Jyoti Heights">
+                      <option value="galaxy">
+                  </datalist>
+                </h3>
+                <button class="button1 primary-default-btn transparent-btn">Submit</button>
+              </form>
+             
           </article>
 
           
