--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -140,33 +140,11 @@
 </nav>
     <!-- ! Main -->
     <main class="main users chart-page" id="skip-target">
+      
+
       <div class="container">
-        <article class="white-block">
-            <h2 class="container-title">Filter</h2>
-            <form>
-              <h3>From : 
-                <input type="date" id="start-date" name="start-date">
-                To : 
-                <input type="date" id="end-date" name="end-date">
-              </h3>
-              <br>
-              <h3>
-                Construction Site :
-                <select id="construction-site" placeholder="Choose Option">
-                  <option hidden >Select Construction Site</option>
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </h3>
-              <br>
-              <button class="button1 primary-default-btn transparent-btn">Submit</button>
-            </form> 
-        </article>
-      </div>
-      <div class="container">
+      <div class="row">
+        <div class="col-lg-9">
       <div class="users-table table-wrapper">
               <table class="posts-table">
                 <thead>
@@ -182,9 +160,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Harsh Tiwari</td>
@@ -198,9 +175,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                      
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Ankit Yadav</td>
@@ -213,8 +189,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Tanmay Shukla</td>
@@ -228,9 +204,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-05.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-05.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Pratik Thakur</td>
@@ -244,9 +219,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Niraj Gupta</td>
@@ -259,9 +233,8 @@
                   <tr>
                     
                     <td>
-                      <div class="pages-table-img">
-                        <picture><source srcset="{% static 'img/avatar/avatar-face-03.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-face-03.png' %}" alt="User Name"></picture>
-                        
+                      <div class="stat-cards-icon-workers-list primary">
+                        <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
                     <td>Karan Yadav</td>
@@ -277,11 +250,90 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>View All</td>
+                    <td></td>
                   </tr>
                 </tbody>
               </table>
             </div>
+        </div>
+
+        <div class="col-lg-3">
+        <article class="white-block">
+          <h2 class="main-title">Filter</h2>
+          <br>
+            <form>
+              <h3 class="filter-text">From :
+                <br> 
+                <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                    <datalist id="month">
+                        <option value="January">
+                        <option value="February">
+                        <option value="March">
+                        <option value="April">
+                        <option value="May">
+                        <option value="June">
+                        <option value="July">
+                        <option value="August">
+                        <option value="September">
+                        <option value="October">
+                        <option value="November">
+                        <option value="December">
+                    </datalist>
+                    <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                    <datalist id="year">
+                        <option value="2021">
+                        <option value="2022">
+                        <option value="2023">
+                        <option value="2024">
+                        <option value="2025">
+                        <option value="2026">
+                    </datalist>
+                </h3>
+                <h3 class="filter-text">
+                To : 
+                <br>
+                <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                <datalist id="month">
+                    <option value="January">
+                    <option value="February">
+                    <option value="March">
+                    <option value="April">
+                    <option value="May">
+                    <option value="June">
+                    <option value="July">
+                    <option value="August">
+                    <option value="September">
+                    <option value="October">
+                    <option value="November">
+                    <option value="December">
+                </datalist>
+                <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                <datalist id="year">
+                    <option value="2021">
+                    <option value="2022">
+                    <option value="2023">
+                    <option value="2024">
+                    <option value="2025">
+                    <option value="2026">
+                </datalist>
+              </h3>
+              <h3 class="filter-text">
+                Construction Site :
+                <br>
+                <input class="form-input" list="site" type="text" placeholder="Enter Site name" required>
+                <datalist id="site">
+                    <option value="Om Complex">
+                    <option value="LN Tower">
+                    <option value="Jyoti Heights">
+                    <option value="galaxy">
+                </datalist>
+              </h3>
+              <button class="button1 primary-default-btn transparent-btn">Submit</button>
+            </form>
+           
+        </article>
+      </div>
+    
           </div>
     </main>
     <!-- ! Footer -->
