--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -158,7 +158,7 @@
         </div>
         <br>
         <article class="white-block">
-            <h4>Last Salary Taken on : 02/04/2021</h4>
+            <h4>Last Salary Paid on : 02/04/2021</h4>
         </article>
 
         <article class="white-block">
@@ -168,10 +168,56 @@
               <h4>Salary per day : 900/-</h4>
               <br><br>
               <h4>
-                From : 
-                <input type="date" id="start-date" name="start-date">
+                From :
+                <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                      <datalist id="month">
+                          <option value="January">
+                          <option value="February">
+                          <option value="March">
+                          <option value="April">
+                          <option value="May">
+                          <option value="June">
+                          <option value="July">
+                          <option value="August">
+                          <option value="September">
+                          <option value="October">
+                          <option value="November">
+                          <option value="December">
+                      </datalist>
+                      <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                      <datalist id="year">
+                          <option value="2021">
+                          <option value="2022">
+                          <option value="2023">
+                          <option value="2024">
+                          <option value="2025">
+                          <option value="2026">
+                      </datalist>
                 To : 
-                <input type="date" id="end-date" name="end-date">
+                <input class="form-date-input" list="month" type="text" placeholder="Month" required>
+                      <datalist id="month">
+                          <option value="January">
+                          <option value="February">
+                          <option value="March">
+                          <option value="April">
+                          <option value="May">
+                          <option value="June">
+                          <option value="July">
+                          <option value="August">
+                          <option value="September">
+                          <option value="October">
+                          <option value="November">
+                          <option value="December">
+                      </datalist>
+                      <input class="form-date-input" list="year" type="text" placeholder="Year" required>
+                      <datalist id="year">
+                          <option value="2021">
+                          <option value="2022">
+                          <option value="2023">
+                          <option value="2024">
+                          <option value="2025">
+                          <option value="2026">
+                      </datalist>
               </h4>
               <br><br>
               <h4>
