--- a/templates/addsite.html
+++ b/templates/addsite.html
@@ -32,6 +32,11 @@
 
                 </label>
                 <label class="form-label-wrapper">
+                    <p class="form-label">Site City</p>
+                    {{form.city}}
+
+                </label>
+                <label class="form-label-wrapper">
                     <p class="form-label">Site Contact no.</p>
                    {{form.contact}}
                 </label>
